1998-09-26  Mario Weilguni <mweilguni@kde.org>

	* cosmetic changes in ppplog.cpp

1998-09-24  Mario Weilguni <mweilguni@kde.org>

	* Ownership of PPP logfiles corrected to the real, not the
	effective user id

1998-09-23  Harri Porten  <porten@kde.org>

	* ppplog.cpp: skip remote message if empty
	* ppplog.cpp: fixed segfault triggered by virgin log files

1998-09-21  Mario Weilguni <mweilguni@kde.org>

	* introducing quickhelp
	* forgot to add i18n to quickhelp entries, fixed this

1998-09-20  Mario Weilguni <mweilguni@kde.org>

	* PPP-arguments dialog reworked	

1998-09-19  Mario Weilguni <mweilguni@kde.org>

	* more QuickHelp
	* began to clean up layout management, it's a mess
	* added setup widget for the throughput graph
	* some code cleanups

1998-09-16  Mario Weilguni <mweilguni@kde.org>

	* Added some more QuickHelp
	* The QLineEdit for fixed IP and netmask is not re-initialized
	with  "0.0.0.0" whenever you select "dynamic IP"
	* the scripting widget is disabled if authentication PAP or CHAP
	is selected
	
1998-09-15  Mario Weilguni <mweilguni@kde.org>

	* replaced strings that span several lines with multiple
	strings, it seems that this was a GCC-only feature

1998-09-11  Mario Weilguni <mweilguni@kde.org>

	* more code cleanups
	* fixed a bug in log.h (semicolon after a macro definition --
	brrr)
	* added quickhelp to many setup dialogs

1998-09-05  Harri Porten  <porten@kde.org>

	* pppdata.cpp: fixed warnings
	* replaced readListConfig calls with calls to readWholeListConfig
	* and removed 'Whole' from function names afterwards
	* connect.cpp: sped up scripting loop by reducing calls to gpppdata

1998-08-29  Mario Weilguni <mweilguni@kde.org>

	* In ConnectWidget::readtty(): after a newline or CR is received,
	the QSocketnotifier is disabled for 20ms to avoid reading too
	much, e.g. the start characters of the ppp protocol.
	* added compile option "NO_GRAPH" to disable the graph
	* removed the compile options "COMPILE_PIX" in pppstatsdlg.cpp,