@@ -38,6 +38,7 @@ const int TEST_NOCONNECT = 2;
 const int TEST_CRITICAL = 3;
 
 // Various tests to be run at starttime
+int securityTests();
 int runTests();
 
 #endif
